--- a/css/style.css
+++ b/css/style.css
@@ -1,122 +1,125 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	background-color: var(--color);
+	max-height: 100vh;
+	font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
-header {
-    padding-top: 2px;
-    margin: 0px auto;
-    width: 600px;
-    display: grid;
-    grid-gap: 1.2px;
-    grid-template-columns: 400px 300px 100px;
+.dices {
+	padding: 17px;
+	column-count: 5;
+	column-fill: balance;
 }
 
-.searched {
-    padding-left: 10px;
-    border-radius: 10px;
-    border: 2px solid blueviolet;
+:root {
+	--color: rgb(58, 2, 4);
+	--btn-hover: linear-gradient(
+		45deg,
+		yellow,
+		rgb(233, 247, 48),
+		rgb(247, 243, 54),
+		rgb(238, 217, 99),
+		rgb(255, 177, 100),
+		rgb(252, 185, 40),
+		rgb(248, 163, 52),
+		rgb(255, 166, 0)
+	);
 }
 
-.search {
-    color: white;
-    background-color: darkcyan;
-    border-radius: 10px;
-    border: 2px solid black;
+h1 {
+	color: goldenrod;
+	cursor: pointer;
 }
 
-main {
-    padding-left: 50px;
-    padding-top: 5px;
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: 700px 500px;
-    grid-template-rows: repeat(4, 210px);
-    margin-bottom: 10px;
+.headings {
+	padding: 10px;
+	column-count: 5;
+	column-fill: balance;
 }
 
-.temp-now {
-    padding-left: 5px;
-    grid-area: 1/1/2/2;
+.credits {
+	column-count: 5;
+	column-fill: balance;
+	color: rgb(253, 175, 7);
 }
 
-.temp-now h2 {
-    padding-top: 100px;
+.text-center {
+	color: goldenrod;
+	text-align: center;
+	font-weight: bolder;
+	font-size: large;
 }
 
-.day-weather {
-    display: grid;
-    grid-gap: 0.2rem;
-    grid-template-columns: repeat(5, 1fr);
-    background-color: lightsteelblue;
-    border-radius: 10px;
-    grid-area: 2/1/3/2;
+.dices-computer-player {
+	column-count: 1;
 }
 
-.time {
-    border: 2px solid lightslategray;
-    background-image: linear-gradient(33deg, #71c1f5 0%, #9ddbf3 50%, #ffffff 100%);
-    border-radius: 10px;
+.dices-player {
+	column-count: 1;
 }
 
-.time h3 {
-    padding-left: 5px;
+.message {
+	padding: 60px;
 }
 
-.time h4 {
-    padding-top: 150px;
-    padding-left: 3px;
+.message-box {
+	max-width: 400px;
+	min-height: 48px;
+	margin: auto;
+	border: 3px solid;
+	border-radius: 20px;
+	font-weight: 700;
+	box-shadow: 0px 2px 8px goldenrod;
+}
+.message-box:hover {
+	color: gold;
+	transition: 0.5s;
+	box-shadow: 0px 3px 9px gold;
 }
 
-.details {
-    display: grid;
-    grid-gap: 0.5rem;
-    grid-template-columns: repeat(2, 1fr);
-    background-color: lightsteelblue;
-    border-radius: 10px;
-    grid-area: 3/1/5/2;
+.controls {
+	padding: 50px;
+	column-count: 6;
+	column-fill: balance;
 }
 
-.details>div {
-    padding-left: 5px;
-    border-radius: 10px;
-    border: 2px solid lightskyblue;
-    background-image: linear-gradient(0deg, #0093E9 0%, #80D0C7 50%, #ffffff 100%);
+button {
+	color: goldenrod;
+	background-color: black;
+	width: 95%;
+	padding: 12px 40px;
+	border: 3px solid goldenrod;
+	border-radius: 20px;
+	font-weight: bolder;
+	font-size: medium;
+	transition-timing-function: ease;
+	box-shadow: 0 8px 16px 0 rgba(252, 214, 1, 0.2), 0 6px 20px 0 rgba(37, 37, 37, 0.19);
 }
 
-.details>div h3 {
-    padding-top: 80px;
+button:disabled {
+	background-color: gray;
+	color: white;
 }
 
-.week-weather {
-    display: grid;
-    grid-template-rows: repeat(6, 110px);
-    grid-area: 1/2/4/3;
+span {
+	color: rgb(251, 248, 248);
 }
 
-.day {
-    background-color: lightsteelblue;
-    border-radius: 30px;
-    border-bottom: 2px solid;
+h1:hover {
+	color: yellow;
+	transition: 1s;
 }
 
-.sun {
-    display: grid;
-    grid-gap: 0.2rem;
-    grid-template-columns: repeat(2, 1fr);
+button:hover {
+	border: 3px solid darkgoldenrod;
+	background-image: var(--btn-hover);
+	color: black;
+	transform: translateY(-3px);
+	transition: 0.9s;
 }
 
-.sun-details:nth-child(1) {
-border-radius: 10px;
-    padding-left: 5px;
-    background-image: linear-gradient(207deg, #FEE140 0%, #FA709A 100%);
-    
-}
-
-.sun-details:nth-child(2) {
-    border-radius: 10px;
-    padding-left: 5px;
-    background-image: linear-gradient(90deg, #FAD961 0%, #F76B1C 100%);
+.ronden {
+	color: goldenrod;
+	font-size: large;
+	float: left;
+	margin: 3px;
 }
